crates/tlang_test_runner/src/snapshots/tlang_test_runner__tests__strings_invalid_escape_sequences_javascript@strings__invalid_escape_sequences.tlang.snap
---
source: crates/tlang_test_runner/src/main.rs
expression: apply_redactions(&output)
input_file: tests/strings/invalid_escape_sequences.tlang
---
[stdin]:288
    let invalid2 = "Another bad: \x";
                                 ^^^^
Bad character escape sequence, expected 2 hex characters

SyntaxError: Invalid hexadecimal escape sequence
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:393:10)
    at evalTypeScript (node:internal/process/execution:261:22)
    at node:internal/main/eval_stdin:51:5
    at Socket.<anonymous> (node:internal/process/execution:206:5)
    at Socket.emit (node:events:519:35)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)

Node.js v24.0.2
